--- a/result/2022-01-08.md
+++ b/result/2022-01-08.md
@@ -1,10 +1,10 @@
 1. [专家称并不是睡得晚就是熬夜](https://s.weibo.com//weibo?q=%23%E4%B8%93%E5%AE%B6%E7%A7%B0%E5%B9%B6%E4%B8%8D%E6%98%AF%E7%9D%A1%E5%BE%97%E6%99%9A%E5%B0%B1%E6%98%AF%E7%86%AC%E5%A4%9C%23&Refer=top) 1856658
-2. [在民族复兴伟大航程中行稳致远](https://s.weibo.com//weibo?q=%23%E5%9C%A8%E6%B0%91%E6%97%8F%E5%A4%8D%E5%85%B4%E4%BC%9F%E5%A4%A7%E8%88%AA%E7%A8%8B%E4%B8%AD%E8%A1%8C%E7%A8%B3%E8%87%B4%E8%BF%9C%23&Refer=top) 959452
-3. [西安不再查验就医人员48小时核酸阴性证明](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E4%B8%8D%E5%86%8D%E6%9F%A5%E9%AA%8C%E5%B0%B1%E5%8C%BB%E4%BA%BA%E5%91%9848%E5%B0%8F%E6%97%B6%E6%A0%B8%E9%85%B8%E9%98%B4%E6%80%A7%E8%AF%81%E6%98%8E%23&Refer=top) 932839
-4. [西安本轮疫情来源于巴基斯坦航班输入](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%9C%AC%E8%BD%AE%E7%96%AB%E6%83%85%E6%9D%A5%E6%BA%90%E4%BA%8E%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%88%AA%E7%8F%AD%E8%BE%93%E5%85%A5%23&Refer=top) 846967
-5. [男子列车上借奶粉被识破孩子是买的](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%88%97%E8%BD%A6%E4%B8%8A%E5%80%9F%E5%A5%B6%E7%B2%89%E8%A2%AB%E8%AF%86%E7%A0%B4%E5%AD%A9%E5%AD%90%E6%98%AF%E4%B9%B0%E7%9A%84%23&Refer=top) 829937
-6. [沙丘](https://s.weibo.com//weibo?q=%E6%B2%99%E4%B8%98&Refer=top) 752035
-7. [熬夜会降低大脑认知功能](https://s.weibo.com//weibo?q=%23%E7%86%AC%E5%A4%9C%E4%BC%9A%E9%99%8D%E4%BD%8E%E5%A4%A7%E8%84%91%E8%AE%A4%E7%9F%A5%E5%8A%9F%E8%83%BD%23&Refer=top) 685000
+2. [熬夜会降低大脑认知功能](https://s.weibo.com//weibo?q=%23%E7%86%AC%E5%A4%9C%E4%BC%9A%E9%99%8D%E4%BD%8E%E5%A4%A7%E8%84%91%E8%AE%A4%E7%9F%A5%E5%8A%9F%E8%83%BD%23&Refer=top) 1034738
+3. [在民族复兴伟大航程中行稳致远](https://s.weibo.com//weibo?q=%23%E5%9C%A8%E6%B0%91%E6%97%8F%E5%A4%8D%E5%85%B4%E4%BC%9F%E5%A4%A7%E8%88%AA%E7%A8%8B%E4%B8%AD%E8%A1%8C%E7%A8%B3%E8%87%B4%E8%BF%9C%23&Refer=top) 959452
+4. [西安不再查验就医人员48小时核酸阴性证明](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E4%B8%8D%E5%86%8D%E6%9F%A5%E9%AA%8C%E5%B0%B1%E5%8C%BB%E4%BA%BA%E5%91%9848%E5%B0%8F%E6%97%B6%E6%A0%B8%E9%85%B8%E9%98%B4%E6%80%A7%E8%AF%81%E6%98%8E%23&Refer=top) 932839
+5. [西安本轮疫情来源于巴基斯坦航班输入](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%9C%AC%E8%BD%AE%E7%96%AB%E6%83%85%E6%9D%A5%E6%BA%90%E4%BA%8E%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%88%AA%E7%8F%AD%E8%BE%93%E5%85%A5%23&Refer=top) 846967
+6. [男子列车上借奶粉被识破孩子是买的](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%88%97%E8%BD%A6%E4%B8%8A%E5%80%9F%E5%A5%B6%E7%B2%89%E8%A2%AB%E8%AF%86%E7%A0%B4%E5%AD%A9%E5%AD%90%E6%98%AF%E4%B9%B0%E7%9A%84%23&Refer=top) 829937
+7. [沙丘](https://s.weibo.com//weibo?q=%E6%B2%99%E4%B8%98&Refer=top) 752035
 8. [深圳2例确诊活动轨迹公布](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B32%E4%BE%8B%E7%A1%AE%E8%AF%8A%E6%B4%BB%E5%8A%A8%E8%BD%A8%E8%BF%B9%E5%85%AC%E5%B8%83%23&Refer=top) 675878
 9. [郑州6小时完成1260万人核酸采样](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E6%E5%B0%8F%E6%97%B6%E5%AE%8C%E6%88%901260%E4%B8%87%E4%BA%BA%E6%A0%B8%E9%85%B8%E9%87%87%E6%A0%B7%23&Refer=top) 635199
 10. [长沙85后女子私生饭式骚扰00后男子](https://s.weibo.com//weibo?q=%E9%95%BF%E6%B2%9985%E5%90%8E%E5%A5%B3%E5%AD%90%E7%A7%81%E7%94%9F%E9%A5%AD%E5%BC%8F%E9%AA%9A%E6%89%B000%E5%90%8E%E7%94%B7%E5%AD%90&Refer=top) 628080
