--- a/result/2022-01-08.md
+++ b/result/2022-01-08.md
@@ -1,4 +1,4 @@
-1. [青海门源6.9级地震](https://s.weibo.com//weibo?q=%E9%9D%92%E6%B5%B7%E9%97%A8%E6%BA%906.9%E7%BA%A7%E5%9C%B0%E9%9C%87&Refer=top) 2607743
+1. [青海门源6.9级地震](https://s.weibo.com//weibo?q=%E9%9D%92%E6%B5%B7%E9%97%A8%E6%BA%906.9%E7%BA%A7%E5%9C%B0%E9%9C%87&Refer=top) 2674139
 2. [专家称并不是睡得晚就是熬夜](https://s.weibo.com//weibo?q=%23%E4%B8%93%E5%AE%B6%E7%A7%B0%E5%B9%B6%E4%B8%8D%E6%98%AF%E7%9D%A1%E5%BE%97%E6%99%9A%E5%B0%B1%E6%98%AF%E7%86%AC%E5%A4%9C%23&Refer=top) 1856658
 3. [熬夜会降低大脑认知功能](https://s.weibo.com//weibo?q=%23%E7%86%AC%E5%A4%9C%E4%BC%9A%E9%99%8D%E4%BD%8E%E5%A4%A7%E8%84%91%E8%AE%A4%E7%9F%A5%E5%8A%9F%E8%83%BD%23&Refer=top) 1480216
 4. [在民族复兴伟大航程中行稳致远](https://s.weibo.com//weibo?q=%23%E5%9C%A8%E6%B0%91%E6%97%8F%E5%A4%8D%E5%85%B4%E4%BC%9F%E5%A4%A7%E8%88%AA%E7%A8%8B%E4%B8%AD%E8%A1%8C%E7%A8%B3%E8%87%B4%E8%BF%9C%23&Refer=top) 959452
@@ -25,20 +25,21 @@
 25. [北京冬奥开幕式独家剧透](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A5%E5%BC%80%E5%B9%95%E5%BC%8F%E7%8B%AC%E5%AE%B6%E5%89%A7%E9%80%8F%23&Refer=top) 256711
 26. [成年人的破防是童言无忌](https://s.weibo.com//weibo?q=%23%E6%88%90%E5%B9%B4%E4%BA%BA%E7%9A%84%E7%A0%B4%E9%98%B2%E6%98%AF%E7%AB%A5%E8%A8%80%E6%97%A0%E5%BF%8C%23&Refer=top) 234494
 27. [北京冬奥开幕式总导演张艺谋](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A5%E5%BC%80%E5%B9%95%E5%BC%8F%E6%80%BB%E5%AF%BC%E6%BC%94%E5%BC%A0%E8%89%BA%E8%B0%8B%23&Refer=top) 224279
-28. [被姐夫投百草枯女孩苏醒比胜利手势](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E5%A7%90%E5%A4%AB%E6%8A%95%E7%99%BE%E8%8D%89%E6%9E%AF%E5%A5%B3%E5%AD%A9%E8%8B%8F%E9%86%92%E6%AF%94%E8%83%9C%E5%88%A9%E6%89%8B%E5%8A%BF%23&Refer=top) 204584
-29. [货拉拉女乘客坠亡案二审维持原判](https://s.weibo.com//weibo?q=%23%E8%B4%A7%E6%8B%89%E6%8B%89%E5%A5%B3%E4%B9%98%E5%AE%A2%E5%9D%A0%E4%BA%A1%E6%A1%88%E4%BA%8C%E5%AE%A1%E7%BB%B4%E6%8C%81%E5%8E%9F%E5%88%A4%23&Refer=top) 195820
-30. [被这只小老虎奶到了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E8%BF%99%E5%8F%AA%E5%B0%8F%E8%80%81%E8%99%8E%E5%A5%B6%E5%88%B0%E4%BA%86%23&Refer=top) 193218
-31. [大锁一年一度喜剧大赛获奖发言](https://s.weibo.com//weibo?q=%23%E5%A4%A7%E9%94%81%E4%B8%80%E5%B9%B4%E4%B8%80%E5%BA%A6%E5%96%9C%E5%89%A7%E5%A4%A7%E8%B5%9B%E8%8E%B7%E5%A5%96%E5%8F%91%E8%A8%80%23&Refer=top) 183916
-32. [自我管理的5个好习惯](https://s.weibo.com//weibo?q=%E8%87%AA%E6%88%91%E7%AE%A1%E7%90%86%E7%9A%845%E4%B8%AA%E5%A5%BD%E4%B9%A0%E6%83%AF&Refer=top) 181202
-33. [张艺谋称祖国强大才有双奥导演](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E8%89%BA%E8%B0%8B%E7%A7%B0%E7%A5%96%E5%9B%BD%E5%BC%BA%E5%A4%A7%E6%89%8D%E6%9C%89%E5%8F%8C%E5%A5%A5%E5%AF%BC%E6%BC%94%23&Refer=top) 177476
-34. [西安市卫健委向全市人民致歉](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%B8%82%E5%8D%AB%E5%81%A5%E5%A7%94%E5%90%91%E5%85%A8%E5%B8%82%E4%BA%BA%E6%B0%91%E8%87%B4%E6%AD%89%23&Refer=top) 174541
-35. [西安27个街道出现病例部分来源不明](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%8927%E4%B8%AA%E8%A1%97%E9%81%93%E5%87%BA%E7%8E%B0%E7%97%85%E4%BE%8B%E9%83%A8%E5%88%86%E6%9D%A5%E6%BA%90%E4%B8%8D%E6%98%8E%23&Refer=top) 168385
-36. [胡军说年轻演员只靠颜值走不远](https://s.weibo.com//weibo?q=%23%E8%83%A1%E5%86%9B%E8%AF%B4%E5%B9%B4%E8%BD%BB%E6%BC%94%E5%91%98%E5%8F%AA%E9%9D%A0%E9%A2%9C%E5%80%BC%E8%B5%B0%E4%B8%8D%E8%BF%9C%23&Refer=top) 166445
-37. [争议娃娃修复师已下架网店](https://s.weibo.com//weibo?q=%23%E4%BA%89%E8%AE%AE%E5%A8%83%E5%A8%83%E4%BF%AE%E5%A4%8D%E5%B8%88%E5%B7%B2%E4%B8%8B%E6%9E%B6%E7%BD%91%E5%BA%97%23&Refer=top) 165479
-38. [福建橙码高龄产妇感谢医生接生](https://s.weibo.com//weibo?q=%23%E7%A6%8F%E5%BB%BA%E6%A9%99%E7%A0%81%E9%AB%98%E9%BE%84%E4%BA%A7%E5%A6%87%E6%84%9F%E8%B0%A2%E5%8C%BB%E7%94%9F%E6%8E%A5%E7%94%9F%23&Refer=top) 163186
-39. [深圳疫情](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%96%AB%E6%83%85%23&Refer=top) 159605
-40. [全身牛奶肌是怎么养成的](https://s.weibo.com//weibo?q=%23%E5%85%A8%E8%BA%AB%E7%89%9B%E5%A5%B6%E8%82%8C%E6%98%AF%E6%80%8E%E4%B9%88%E5%85%BB%E6%88%90%E7%9A%84%23&Refer=top) 148434
-41. [男子取款时在手指写110向柜员求救](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%8F%96%E6%AC%BE%E6%97%B6%E5%9C%A8%E6%89%8B%E6%8C%87%E5%86%99110%E5%90%91%E6%9F%9C%E5%91%98%E6%B1%82%E6%95%91%23&Refer=top) 141360
-42. [辽宁海城发现1例疑似阳性](https://s.weibo.com//weibo?q=%23%E8%BE%BD%E5%AE%81%E6%B5%B7%E5%9F%8E%E5%8F%91%E7%8E%B01%E4%BE%8B%E7%96%91%E4%BC%BC%E9%98%B3%E6%80%A7%23&Refer=top) 140904
-43. [一年只出现一次的冰蝴蝶](https://s.weibo.com//weibo?q=%23%E4%B8%80%E5%B9%B4%E5%8F%AA%E5%87%BA%E7%8E%B0%E4%B8%80%E6%AC%A1%E7%9A%84%E5%86%B0%E8%9D%B4%E8%9D%B6%23&Refer=top) 139818
-44. [梅西莱万萨拉赫世界足球先生候选](https://s.weibo.com//weibo?q=%23%E6%A2%85%E8%A5%BF%E8%8E%B1%E4%B8%87%E8%90%A8%E6%8B%89%E8%B5%AB%E4%B8%96%E7%95%8C%E8%B6%B3%E7%90%83%E5%85%88%E7%94%9F%E5%80%99%E9%80%89%23&Refer=top) 80870
+28. [兰州地震](https://s.weibo.com//weibo?q=%E5%85%B0%E5%B7%9E%E5%9C%B0%E9%9C%87&Refer=top) 210990
+29. [被姐夫投百草枯女孩苏醒比胜利手势](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E5%A7%90%E5%A4%AB%E6%8A%95%E7%99%BE%E8%8D%89%E6%9E%AF%E5%A5%B3%E5%AD%A9%E8%8B%8F%E9%86%92%E6%AF%94%E8%83%9C%E5%88%A9%E6%89%8B%E5%8A%BF%23&Refer=top) 204584
+30. [货拉拉女乘客坠亡案二审维持原判](https://s.weibo.com//weibo?q=%23%E8%B4%A7%E6%8B%89%E6%8B%89%E5%A5%B3%E4%B9%98%E5%AE%A2%E5%9D%A0%E4%BA%A1%E6%A1%88%E4%BA%8C%E5%AE%A1%E7%BB%B4%E6%8C%81%E5%8E%9F%E5%88%A4%23&Refer=top) 195820
+31. [被这只小老虎奶到了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E8%BF%99%E5%8F%AA%E5%B0%8F%E8%80%81%E8%99%8E%E5%A5%B6%E5%88%B0%E4%BA%86%23&Refer=top) 193218
+32. [大锁一年一度喜剧大赛获奖发言](https://s.weibo.com//weibo?q=%23%E5%A4%A7%E9%94%81%E4%B8%80%E5%B9%B4%E4%B8%80%E5%BA%A6%E5%96%9C%E5%89%A7%E5%A4%A7%E8%B5%9B%E8%8E%B7%E5%A5%96%E5%8F%91%E8%A8%80%23&Refer=top) 183916
+33. [自我管理的5个好习惯](https://s.weibo.com//weibo?q=%E8%87%AA%E6%88%91%E7%AE%A1%E7%90%86%E7%9A%845%E4%B8%AA%E5%A5%BD%E4%B9%A0%E6%83%AF&Refer=top) 181202
+34. [张艺谋称祖国强大才有双奥导演](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E8%89%BA%E8%B0%8B%E7%A7%B0%E7%A5%96%E5%9B%BD%E5%BC%BA%E5%A4%A7%E6%89%8D%E6%9C%89%E5%8F%8C%E5%A5%A5%E5%AF%BC%E6%BC%94%23&Refer=top) 177476
+35. [西安市卫健委向全市人民致歉](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%B8%82%E5%8D%AB%E5%81%A5%E5%A7%94%E5%90%91%E5%85%A8%E5%B8%82%E4%BA%BA%E6%B0%91%E8%87%B4%E6%AD%89%23&Refer=top) 174541
+36. [西安27个街道出现病例部分来源不明](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%8927%E4%B8%AA%E8%A1%97%E9%81%93%E5%87%BA%E7%8E%B0%E7%97%85%E4%BE%8B%E9%83%A8%E5%88%86%E6%9D%A5%E6%BA%90%E4%B8%8D%E6%98%8E%23&Refer=top) 168385
+37. [胡军说年轻演员只靠颜值走不远](https://s.weibo.com//weibo?q=%23%E8%83%A1%E5%86%9B%E8%AF%B4%E5%B9%B4%E8%BD%BB%E6%BC%94%E5%91%98%E5%8F%AA%E9%9D%A0%E9%A2%9C%E5%80%BC%E8%B5%B0%E4%B8%8D%E8%BF%9C%23&Refer=top) 166445
+38. [争议娃娃修复师已下架网店](https://s.weibo.com//weibo?q=%23%E4%BA%89%E8%AE%AE%E5%A8%83%E5%A8%83%E4%BF%AE%E5%A4%8D%E5%B8%88%E5%B7%B2%E4%B8%8B%E6%9E%B6%E7%BD%91%E5%BA%97%23&Refer=top) 165479
+39. [福建橙码高龄产妇感谢医生接生](https://s.weibo.com//weibo?q=%23%E7%A6%8F%E5%BB%BA%E6%A9%99%E7%A0%81%E9%AB%98%E9%BE%84%E4%BA%A7%E5%A6%87%E6%84%9F%E8%B0%A2%E5%8C%BB%E7%94%9F%E6%8E%A5%E7%94%9F%23&Refer=top) 163186
+40. [深圳疫情](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%96%AB%E6%83%85%23&Refer=top) 159605
+41. [全身牛奶肌是怎么养成的](https://s.weibo.com//weibo?q=%23%E5%85%A8%E8%BA%AB%E7%89%9B%E5%A5%B6%E8%82%8C%E6%98%AF%E6%80%8E%E4%B9%88%E5%85%BB%E6%88%90%E7%9A%84%23&Refer=top) 148434
+42. [男子取款时在手指写110向柜员求救](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%8F%96%E6%AC%BE%E6%97%B6%E5%9C%A8%E6%89%8B%E6%8C%87%E5%86%99110%E5%90%91%E6%9F%9C%E5%91%98%E6%B1%82%E6%95%91%23&Refer=top) 141360
+43. [辽宁海城发现1例疑似阳性](https://s.weibo.com//weibo?q=%23%E8%BE%BD%E5%AE%81%E6%B5%B7%E5%9F%8E%E5%8F%91%E7%8E%B01%E4%BE%8B%E7%96%91%E4%BC%BC%E9%98%B3%E6%80%A7%23&Refer=top) 140904
+44. [一年只出现一次的冰蝴蝶](https://s.weibo.com//weibo?q=%23%E4%B8%80%E5%B9%B4%E5%8F%AA%E5%87%BA%E7%8E%B0%E4%B8%80%E6%AC%A1%E7%9A%84%E5%86%B0%E8%9D%B4%E8%9D%B6%23&Refer=top) 139818
+45. [梅西莱万萨拉赫世界足球先生候选](https://s.weibo.com//weibo?q=%23%E6%A2%85%E8%A5%BF%E8%8E%B1%E4%B8%87%E8%90%A8%E6%8B%89%E8%B5%AB%E4%B8%96%E7%95%8C%E8%B6%B3%E7%90%83%E5%85%88%E7%94%9F%E5%80%99%E9%80%89%23&Refer=top) 80870
