--- a/result/2022-01-08.md
+++ b/result/2022-01-08.md
@@ -44,6 +44,7 @@
 44. [男子取款时在手指写110向柜员求救](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%8F%96%E6%AC%BE%E6%97%B6%E5%9C%A8%E6%89%8B%E6%8C%87%E5%86%99110%E5%90%91%E6%9F%9C%E5%91%98%E6%B1%82%E6%95%91%23&Refer=top) 141360
 45. [辽宁海城发现1例疑似阳性](https://s.weibo.com//weibo?q=%23%E8%BE%BD%E5%AE%81%E6%B5%B7%E5%9F%8E%E5%8F%91%E7%8E%B01%E4%BE%8B%E7%96%91%E4%BC%BC%E9%98%B3%E6%80%A7%23&Refer=top) 140904
 46. [一年只出现一次的冰蝴蝶](https://s.weibo.com//weibo?q=%23%E4%B8%80%E5%B9%B4%E5%8F%AA%E5%87%BA%E7%8E%B0%E4%B8%80%E6%AC%A1%E7%9A%84%E5%86%B0%E8%9D%B4%E8%9D%B6%23&Refer=top) 139818
-47. [中方愿尽己所能向哈方提供必要支持](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E6%96%B9%E6%84%BF%E5%B0%BD%E5%B7%B1%E6%89%80%E8%83%BD%E5%90%91%E5%93%88%E6%96%B9%E6%8F%90%E4%BE%9B%E5%BF%85%E8%A6%81%E6%94%AF%E6%8C%81%23&Refer=top) 87294
+47. [中方愿尽己所能向哈方提供必要支持](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E6%96%B9%E6%84%BF%E5%B0%BD%E5%B7%B1%E6%89%80%E8%83%BD%E5%90%91%E5%93%88%E6%96%B9%E6%8F%90%E4%BE%9B%E5%BF%85%E8%A6%81%E6%94%AF%E6%8C%81%23&Refer=top) 100135
 48. [梅西莱万萨拉赫世界足球先生候选](https://s.weibo.com//weibo?q=%23%E6%A2%85%E8%A5%BF%E8%8E%B1%E4%B8%87%E8%90%A8%E6%8B%89%E8%B5%AB%E4%B8%96%E7%95%8C%E8%B6%B3%E7%90%83%E5%85%88%E7%94%9F%E5%80%99%E9%80%89%23&Refer=top) 80870
-49. [3中国公民在尼日利亚被绑架](https://s.weibo.com//weibo?q=%233%E4%B8%AD%E5%9B%BD%E5%85%AC%E6%B0%91%E5%9C%A8%E5%B0%BC%E6%97%A5%E5%88%A9%E4%BA%9A%E8%A2%AB%E7%BB%91%E6%9E%B6%23&Refer=top) 31175
+49. [3中国公民在尼日利亚被绑架](https://s.weibo.com//weibo?q=%233%E4%B8%AD%E5%9B%BD%E5%85%AC%E6%B0%91%E5%9C%A8%E5%B0%BC%E6%97%A5%E5%88%A9%E4%BA%9A%E8%A2%AB%E7%BB%91%E6%9E%B6%23&Refer=top) 65940
+50. [如何惹哭一只猫](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E6%83%B9%E5%93%AD%E4%B8%80%E5%8F%AA%E7%8C%AB%23&Refer=top) 31903
